# velp

./: .replit  README-BOOK2-RESOURCES.md  README-RESOURCE-GENERATOR.md  add_british_currency_resources.js  add_lesson_plan.js  admin_page.html  analyze_resources.py  basic-html-server.mjs  book1-resource-viewer.html  book1-resources.csv  book1-unit1-test.html  book2-resources.csv  british_currency_lesson.json  complete-excel-sync.js  cookies.txt  create_units.sql  docx_content.txt  excel-qa-test.html  excel_to_json_converter.py  extract_resources.py  fix-auth-types.ts  fix-missing-units.js  fix-types.js  fix_excel_processor.js  fix_excel_processor.mjs  generate-book1-resources-from-csv.js  generate-book2-resources-from-csv.js  kill-node-process.js  kill-process.js  lesson-plans-demo.html  lesson-plans-example.html  login_response.html  migrate.sql  new_unit3.txt  package-lock.json  package.json  parse_docx_resources.py  parse_docx_resources_fixed.py  pattern-test.js  process_all_excel_files.py  (+56 more)
attached_assets/: All_Book_1_Unique_Question_Patterns.csv  All_Book_4_Unique_Question_Patterns.csv  All_Book_7_Unique_Question_Patterns.csv  Pasted--00-A-Book-7-Unit-4-pdf-00-A-Unit-4-Page-1-jp-1746111940627.txt  Pasted--00-A-Visual-English-1-Unit-3-Old-Version-pdf--1747271081404.txt  Pasted--00-A-Visual-English-1-Unit-5-NEW-Version-pdf--1745789322700.txt  Pasted--00-B-A-Video-Season-Song-Pancake-Manor-mp4-00--1745789624450.txt  Pasted--00-D-A-Rooms-of-the-House-Song-Planet-Pop-mp4--1745790091531.txt  Pasted--00-E-A-Video-I-See-Something-Blue-Super-Simple-Songs-mp4--1745789339402.txt  (+213 more)
(+895 files in other folders)
